# egde-tts-webui

./: LICENSE  README.md  app.py  pyproject.toml  requirements.txt
templates/: conversion.html  index.html  result.html
