[project]
name = "egde-tts-webui"
version = "1.0.0"
description = "A web UI for Edge TTS"
requires-python = ">=3.13"
dependencies = [
    "audioop-lts>=0.2.1",
    "edge-tts>=7.0.2",
    "flask>=3.1.1",
    "pydub>=0.25.1",
    "srt>=3.5.3",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
